# Novita-CollabHub

./: .gitignore  README.md  README.mdx
examples/agent-runtime/: README.md
examples/agent-runtime/agentic-frameworks/autogen/: .env.example  LICENSE  README.md  app.py  package-lock.json  pyproject.toml  requirements.txt
examples/agent-runtime/agentic-frameworks/google-adk/: .env.example  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
examples/agent-runtime/agentic-frameworks/google-adk/tests/: test_local_basic.sh  test_sandbox_basic.py
examples/agent-runtime/agentic-frameworks/langgraph/: .env.example  .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
examples/agent-runtime/agentic-frameworks/langgraph/tests/: test_local_basic.sh  test_local_multi_turn.sh  test_local_streaming.sh  test_sandbox_basic.py  test_sandbox_multi_turn.py  test_sandbox_streaming.py
examples/browser-use/: .env.example  README.md
examples/browser-use/e2b-template/: .env.example  README.md  build.sh
examples/claude-agent/: README.md  agent.ts  build.mjs  package-lock.json  package.json
examples/novita-api-mcp/: README.md  client.py  low-level-server.py  server.py
examples/novita-crewai/: README.md  crew.py  flow.py  old_crew.py
examples/novita-crewai/config/: agents.yaml  tasks.yaml
examples/rag-example/: README.md  main.py  query_processor.py  requirements.txt
examples/sandbox/: README.md  browser_agent.py  main.py  notebook.ipynb  pyproject.toml  sandbox_eda.py
examples/sandbox-chat-agent/: README.md  gradio_chat.py
examples/sandbox-code-assistant/: README.md  main.py  requirements.txt
examples/sandbox-code-assistant/code-assistant-extension/: background.js  content.js  manifest.json  styles.css
examples/sandbox/prompts/: system_prompt.py
(+14 files in other folders)
